--- a/index.html
+++ b/index.html
@@ -37,22 +37,27 @@
               </svg>
             </button>
             <!-- <h2 class="card-title">Previous Searches</h2> -->
-            <div class="mt-5" id="prevSearches">
+            <div class="mt-5 bg-secondary" id="prevSearches">
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"></li>
+              </ul>
               <!--Buttons for previous searches here-->
             </div>
           </div>
         </div>
         <div class="col-8">
-          <div class="row">
+          <div class="row span4">
             <div class="col">
               <div class="card">
                 <div class="card-body">
-                  <h2 class="card-title">Card title</h2>
-                  <p class="card-text">Temperature: <span id="city"></span>F</p>
-                  <p class="card-text">Temperature: <span id="temp"></span>F</p>
-                  <p class="card-text">Humidity: <span id="humid"></span>%</p>
+                  <!-- <h2 class="card-title">Card title</h2> -->
+                  <p class="card-text mb-0 h2"><span id="city"></span></p>
                   <p class="card-text">
-                    Wind Speed: <span id="wind"></span>MPH
+                    Temperature: <span id="temp"></span> F
+                  </p>
+                  <p class="card-text">Humidity: <span id="humid"></span> %</p>
+                  <p class="card-text">
+                    Wind Speed: <span id="wind"></span> MPH
                   </p>
                   <p class="card-text">UV Index: <span id="uvi"></span></p>
                 </div>
