add local storage

--- a/index.html
+++ b/index.html
@@ -37,11 +37,8 @@
               </svg>
             </button>
             <!-- <h2 class="card-title">Previous Searches</h2> -->
-            <div class="mt-5 bg-secondary" id="prevSearches">
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item"></li>
-              </ul>
-              <!--Buttons for previous searches here-->
+            <div>
+              <ul id="prevSearches" class="list-group"></ul>
             </div>
           </div>
         </div>
@@ -67,7 +64,7 @@
         </div>
       </div>
       <div class="row" id="forecast-container">
-        <div class="col">Forecast</div>
+        <div class="col h3">Forecast</div>
         <!-- 
         <div class="card">
           <div class="card-body" style="width: 18rem">
