add previous searches to front end

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
               </svg>
             </button>
             <!-- <h2 class="card-title">Previous Searches</h2> -->
-            <div>
-              <ul id="prevSearches" class="list-group"></ul>
+            <div class="list-group">
+              <ul id="prevSearches"></ul>
             </div>
           </div>
         </div>
